--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -5,3 +5,7 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "~1.2"
+
+[[constraint]]
+  name = "github.com/rs/xid"
+  version = "1.1.0"
