Add delete poll button
This commits also refactors some code and sets a lot of tests and error checks

--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -1,6 +1,6 @@
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
-  version = "~5.2.0"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
