--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -1,12 +1,16 @@
+[prune]
+  non-go = true
+  go-tests = true
+  unused-packages = true
+
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
   branch = "master"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
-  version = "~1.2"
+  version = "~1.2.0"
 
-[prune]
-  non-go = true
-  go-tests = true
-  unused-packages = true
+[[constraint]]
+  name = "github.com/bouk/monkey"
+  version = "~1.0.0"
