--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -14,3 +14,7 @@
 [[constraint]]
   name = "github.com/bouk/monkey"
   version = "~1.0.0"
+
+[[constraint]]
+  name = "github.com/gorilla/mux"
+  version = "~1.6.0"
