Lock to 5.4 release branch

--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -5,7 +5,7 @@
 
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
-  branch = "master"
+  branch = "release-5.4"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
