--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -18,3 +18,7 @@
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "~1.6.0"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "~0.8.0"
