--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -22,3 +22,6 @@
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "~0.8.0"
+[[constraint]]
+  name = "github.com/blang/semver"
+  version = "~3.5.0"
