--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -5,7 +5,7 @@
 
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
-  branch = "release-5.4"
+  version = "~5.4.0"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
@@ -22,6 +22,7 @@
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "~0.8.0"
+
 [[constraint]]
   name = "github.com/blang/semver"
   version = "~3.5.0"
