Downstream https://github.com/mattermost/mattermost-plugin-sample/
Left out build/manifest/main.go on purpose because it would change pluginVersion to not longer be a const

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
 script:
+  - make check-style
   - make test
 
 after_success:
