Lock Mattermost server version to v5.6-rc1

--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -5,7 +5,7 @@
 
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
-  branch = "master"
+  version ="v5.6-rc1"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
