--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -5,7 +5,7 @@
 
 [[constraint]]
   name = "github.com/mattermost/mattermost-server"
-  version = "~5.4.0"
+  version ="v5.6-rc1"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
