--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 script:
   - make check-style
-  - make test
+  - make coverage
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
