--- a/webapp/package.json
+++ b/webapp/package.json
@@ -71,6 +71,7 @@
     "react": "16.8.6",
     "react-redux": "5.1.1",
     "redux": "4.0.1",
+    "superagent": "^5.0.6",
     "xregexp": "4.2.4"
   }
 }
