--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=production",
     "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx . --quiet",
     "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx . --quiet --fix",
-    "test": "jest --forceExit --detectOpenHandles"
+    "test": "jest --forceExit --detectOpenHandles --verbose",
+    "updatesnapshot": "jest -u"
   },
   "jest": {
     "snapshotSerializers": [
@@ -35,43 +36,44 @@
     "transformIgnorePatterns": [
       "node_modules/"
     ],
-    "setupTestFrameworkScriptFile": "<rootDir>/tests/setup.js"
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ]
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-react": "^7.13.0",
-    "jest": "^23.6.0",
+    "jest": "24.8.0",
+    "react-bootstrap": "github:mattermost/react-bootstrap#dcbd68da4d32c1c4b86e8f2942bc69bc2ebed550",
     "react-dom": "^16.8.6",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {
     "core-js": "2.6.5",
     "marked": "github:mattermost/marked#e57e07f419f85178354a3bbbd60de5302483c436",
-    "mattermost-redux": "^5.11.0",
+    "mattermost-redux": "5.11.0",
     "react": "16.8.6",
     "react-redux": "5.1.1",
     "redux": "4.0.1",
-    "superagent": "^5.0.6",
+    "superagent": "5.0.8",
     "xregexp": "4.2.4"
   }
 }
