--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterpoll",
-  "version": "1.1.0",
+  "private": true,
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode=production",
@@ -39,7 +39,6 @@
       "<rootDir>/tests/setup.js"
     ]
   },
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.5",
