--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,9 @@
 linters-settings:
+  dupl:
+    threshold: 100
+  goconst:
+    min-len: 2
+    min-occurrences: 2
   gocyclo:
     min-complexity: 20
   gofmt:
@@ -10,15 +15,30 @@ linters-settings:
     check-shadowing: true
   misspell:
     locale: US
+  maligned:
+    suggest-new: true
   
 linters:
   enable:
     - bodyclose
+    - dupl
+    - goconst
     - gocyclo
     - gofmt
     - goimports
     - golint
     - gosec
+    - maligned
     - misspell
+    - scopelint
     - unconvert
 
+issues:
+  exclude-rules:
+        # Exclude some linters from running on tests files.
+    - path: _test\.go
+      linters:
+        - dupl
+        - goconst
+        - gocyclo
+        - scopelint # https://github.com/kyoh86/scopelint/issues/4
