--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,8 +2,6 @@ linters-settings:
   goconst:
     min-len: 2
     min-occurrences: 2
-  gocyclo:
-    min-complexity: 20
   gofmt:
     simplify: true
   golint:
@@ -11,6 +9,7 @@ linters-settings:
     min-confidence: 0.0
   govet:
     check-shadowing: true
+    enable-all: true
   misspell:
     locale: US
   maligned:
@@ -20,15 +19,19 @@ linters:
   enable:
     - bodyclose
     - goconst
-    - gocyclo
+    - gocritic
     - gofmt
     - goimports
     - golint
     - gosec
+    - interfacer
     - maligned
     - misspell
     - scopelint
+    - stylecheck
     - unconvert
+    - unparam
+    - whitespace
 
 issues:
   exclude-rules:
@@ -37,5 +40,4 @@ issues:
       linters:
         - dupl
         - goconst
-        - gocyclo
         - scopelint # https://github.com/kyoh86/scopelint/issues/4
