--- a/webapp/package.json
+++ b/webapp/package.json
@@ -50,7 +50,7 @@
     "@babel/runtime": "^7.4.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "24.8.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -59,7 +59,7 @@
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.14.2",
-    "jest": "24.8.0",
+    "jest": "^25.1.0",
     "react-bootstrap": "github:mattermost/react-bootstrap#c6957962364e0818a51bbfd13e89919903b422d6",
     "react-dom": "^16.8.6",
     "redux-mock-store": "^1.5.3",
