--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,2 +1,11 @@
 ignore:
   - "server/main.go"
+
+coverage:
+    status:
+        project:
+            default:
+                informational: true
+        patch:
+            default:
+                informational: true
