--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,79 +1,120 @@
 {
-  "name": "matterpoll",
   "private": true,
-  "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx . --quiet",
-    "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx . --quiet --fix",
+    "build:watch": "webpack --mode=production --watch",
+    "debug": "webpack --mode=none",
+    "debug:watch": "webpack --mode=development --watch",
+    "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
+    "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
     "test": "jest --forceExit --detectOpenHandles --verbose",
+    "test:watch": "jest --watch",
+    "test-ci": "jest --forceExit --detectOpenHandles --maxWorkers=2",
+    "check-types": "tsc",
     "updatesnapshot": "jest -u"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.11.6",
+    "@babel/core": "7.11.6",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "7.11.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/polyfill": "7.11.5",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@babel/runtime": "7.11.2",
+    "@emotion/babel-preset-css-prop": "10.0.27",
+    "@emotion/core": "10.0.35",
+    "@types/enzyme": "3.10.7",
+    "@types/jest": "26.0.14",
+    "@types/node": "14.11.2",
+    "@types/react": "16.9.50",
+    "@types/react-dom": "16.9.8",
+    "@types/react-intl": "3.0.0",
+    "@types/react-redux": "7.1.9",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-transition-group": "4.4.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-typescript-to-proptypes": "1.4.1",
+    "css-loader": "4.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.1",
+    "eslint": "7.10.0",
+    "eslint-import-resolver-webpack": "0.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.21.2",
+    "eslint-plugin-react-hooks": "4.1.2",
+    "file-loader": "6.1.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.4.2",
+    "jest-canvas-mock": "2.3.0",
+    "jest-junit": "11.1.0",
+    "mattermost-webapp": "github:mattermost/mattermost-webapp#23f5f93d9f12a7e2b5623e5cee6814366abd9a0f",
+    "redux-mock-store": "1.5.4",
+    "node-sass": "4.14.1",
+    "sass-loader": "10.0.2",
+    "style-loader": "1.2.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12"
+  },
+  "dependencies": {
+    "core-js": "3.6.5",
+    "marked": "github:mattermost/marked#3a9d0a5bd6d735df1a716ab50f73d58a1d865bdb",
+    "mattermost-redux": "5.27.0",
+    "react": "16.13.1",
+    "react-redux": "7.2.1",
+    "redux": "4.0.5",
+    "typescript": "4.0.3",
+    "superagent": "6.1.0",
+    "xregexp": "4.3.0"
   },
   "jest": {
     "snapshotSerializers": [
       "<rootDir>/node_modules/enzyme-to-json/serializer"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "/non_npm_dependencies/"
     ],
+    "clearMocks": true,
     "collectCoverageFrom": [
-      "components/**/*.{js,jsx}"
+      "src/**/*.{js,jsx}"
     ],
     "coverageReporters": [
       "lcov",
-      "test-summary"
+      "text-summary"
     ],
     "moduleNameMapper": {
       "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
       "^.+\\.(css|less|scss)$": "identity-obj-proxy",
+      "^.*i18n.*\\.(json)$": "<rootDir>/tests/i18n_mock.json",
       "^bundle-loader\\?lazy\\!(.*)$": "$1"
     },
     "moduleDirectories": [
       "",
-      "node_modules"
+      "node_modules",
+      "non_npm_dependencies"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ],
     "transformIgnorePatterns": [
-      "node_modules/"
+      "node_modules/(?!react-native|react-router|mattermost-webapp)"
+    ],
+    "setupFiles": [
+      "jest-canvas-mock"
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/tests/setup.js"
-    ]
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.4.5",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "8.0.6",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^6.0.1",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^25.1.0",
-    "react-bootstrap": "github:mattermost/react-bootstrap#c6957962364e0818a51bbfd13e89919903b422d6",
-    "react-dom": "^16.8.6",
-    "redux-mock-store": "^1.5.3",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
-  },
-  "dependencies": {
-    "core-js": "2.6.5",
-    "marked": "github:mattermost/marked#3a9d0a5bd6d735df1a716ab50f73d58a1d865bdb",
-    "mattermost-redux": "5.11.0",
-    "react": "16.8.6",
-    "react-redux": "5.1.1",
-    "redux": "4.0.1",
-    "superagent": "5.0.8",
-    "xregexp": "4.2.4"
+    ],
+    "testURL": "http://localhost:8065"
   }
 }
