lint: disable fieldalignment

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -15,11 +15,13 @@ linters-settings:
   govet:
     check-shadowing: true
     enable-all: true
+    disable:
+      - fieldalignment
   misspell:
     locale: US
   maligned:
     suggest-new: true
-  
+
 linters:
   disable-all: true
   enable:
