Downstream mattermost-plugin-starter-template (#381)
* build: add plan.yml for sync

* build: make sync

* lint: disable fieldalignment

* fix: transpilation warnings

* fix: lint error

* revert changes

* remove header comments

Co-authored-by: Ben Schumacher <ben.schumacher@mattermost.com>

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -114,7 +114,7 @@
       "jest-canvas-mock"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/tests/setup.js"
+      "<rootDir>/tests/setup.tsx"
     ],
     "testURL": "http://localhost:8065"
   }
