--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,6 +3,11 @@ run:
   modules-download-mode: readonly
 
 linters-settings:
+  depguard:
+    packages:
+      - "github.com/nicksnyder/go-i18n/v2/i18n"
+    packages-with-error-message:
+      - github.com/nicksnyder/go-i18n/v2/i18n: "use mattermost/mattermost-plugin-api/i18n instead"
   goconst:
     min-len: 2
     min-occurrences: 2
@@ -19,14 +24,13 @@ linters-settings:
       - fieldalignment
   misspell:
     locale: US
-  maligned:
-    suggest-new: true
 
 linters:
   disable-all: true
   enable:
     - bodyclose
     - deadcode
+    - depguard
     - dogsled
     - errcheck
     - goconst
@@ -38,11 +42,8 @@ linters:
     - gosimple
     - govet
     - ineffassign
-    - interfacer
-    - maligned
     - misspell
     - nakedret
-    - scopelint
     - staticcheck
     - structcheck
     - stylecheck
