--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
     "@babel/runtime": "7.11.2",
     "@emotion/babel-preset-css-prop": "10.0.27",
     "@emotion/core": "10.0.35",
+    "@jest/globals": "26.4.2",
     "@types/enzyme": "3.10.7",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
