Fix a problem in which the `goi18n extract` command did not extract messages (#419)
* refactor: revert to use nicksnyder/go-i18n for i18n.Message

* build: remove depguard from linters

* test: add tests

* chore: fix lint error

* build: run 'npm audit fix'

* chore: fix lint error

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,7 @@
     "updatesnapshot": "jest -u"
   },
   "devDependencies": {
-    "@babel/cli": "7.11.6",
+    "@babel/cli": "7.17.10",
     "@babel/core": "7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "7.11.0",
@@ -27,6 +27,7 @@
     "@babel/runtime": "7.11.2",
     "@emotion/babel-preset-css-prop": "10.0.27",
     "@emotion/core": "10.0.35",
+    "@jest/globals": "26.4.2",
     "@types/enzyme": "3.10.7",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
@@ -57,8 +58,8 @@
     "jest-canvas-mock": "2.3.0",
     "jest-junit": "11.1.0",
     "mattermost-webapp": "github:mattermost/mattermost-webapp#23f5f93d9f12a7e2b5623e5cee6814366abd9a0f",
-    "redux-mock-store": "1.5.4",
     "node-sass": "4.14.1",
+    "redux-mock-store": "1.5.4",
     "sass-loader": "10.0.2",
     "style-loader": "1.2.1",
     "webpack": "4.44.2",
@@ -68,7 +69,7 @@
     "core-js": "3.6.5",
     "invert-color": "2.0.0",
     "marked": "github:mattermost/marked#3a9d0a5bd6d735df1a716ab50f73d58a1d865bdb",
-    "mattermost-redux": "5.27.0",
+    "mattermost-redux": "5.33.1",
     "react": "16.13.1",
     "react-redux": "7.2.1",
     "redux": "4.0.5",
