--- a/webapp/package.json
+++ b/webapp/package.json
@@ -60,6 +60,7 @@
     "mattermost-webapp": "github:mattermost/mattermost-webapp#23f5f93d9f12a7e2b5623e5cee6814366abd9a0f",
     "node-sass": "4.14.1",
     "redux-mock-store": "1.5.4",
+    "redux-thunk": "2.4.1",
     "sass-loader": "10.0.2",
     "style-loader": "1.2.1",
     "webpack": "4.44.2",
