dev: update to node 16

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
     "@emotion/babel-preset-css-prop": "10.0.27",
     "@emotion/core": "10.0.35",
     "@jest/globals": "26.4.2",
+    "@testing-library/jest-dom": "5.16.5",
     "@types/enzyme": "3.10.7",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
@@ -54,11 +55,11 @@
     "eslint-plugin-react-hooks": "4.1.2",
     "file-loader": "6.1.0",
     "identity-obj-proxy": "3.0.0",
+    "isomorphic-fetch": "3.0.0",
     "jest": "26.4.2",
     "jest-canvas-mock": "2.3.0",
     "jest-junit": "11.1.0",
-    "mattermost-webapp": "github:mattermost/mattermost-webapp#23f5f93d9f12a7e2b5623e5cee6814366abd9a0f",
-    "node-sass": "9.0.0",
+    "mattermost-webapp": "github:mattermost/mattermost-webapp#6dcac2993000139f19c1b018f7fa6b9266973918",
     "redux-mock-store": "1.5.4",
     "redux-thunk": "2.4.1",
     "sass-loader": "10.0.2",
@@ -71,7 +72,7 @@
     "invert-color": "2.0.0",
     "marked": "github:mattermost/marked#2ef7f28cc7718e3f551c4ce9ea75fdd7580c2008",
     "mattermost-redux": "5.33.1",
-    "react": "16.13.1",
+    "react": "^16.14.0",
     "react-redux": "7.2.1",
     "redux": "4.0.5",
     "superagent": "6.1.0",
