--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,65 +15,73 @@
   },
   "devDependencies": {
     "@babel/cli": "7.17.10",
-    "@babel/core": "7.11.6",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.11.0",
-    "@babel/plugin-proposal-optional-chaining": "7.11.0",
+    "@babel/core": "7.16.12",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "7.16.7",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/polyfill": "7.11.5",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.10.4",
-    "@babel/runtime": "7.11.2",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/runtime": "7.16.7",
     "@emotion/babel-preset-css-prop": "10.0.27",
     "@emotion/core": "10.0.35",
-    "@jest/globals": "26.4.2",
+    "@jest/globals": "27.4.6",
     "@testing-library/jest-dom": "5.16.5",
-    "@types/enzyme": "3.10.7",
-    "@types/jest": "26.0.14",
-    "@types/node": "14.11.2",
-    "@types/react": "16.9.50",
-    "@types/react-dom": "16.9.8",
+    "@types/enzyme": "3.10.11",
+    "@types/jest": "27.4.0",
+    "@types/node": "17.0.2",
+    "@types/react": "16.14.26",
+    "@types/react-dom": "16.9.19",
     "@types/react-intl": "3.0.0",
-    "@types/react-redux": "7.1.9",
+    "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.1.5",
     "@types/react-transition-group": "4.4.0",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.1",
+    "@typescript-eslint/parser": "5.10.1",
     "babel-eslint": "10.1.0",
-    "babel-jest": "26.3.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-typescript-to-proptypes": "1.4.1",
-    "css-loader": "4.3.0",
+    "babel-jest": "27.4.6",
+    "babel-loader": "8.2.2",
+    "babel-plugin-typescript-to-proptypes": "2.0.0",
+    "css-loader": "6.5.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
-    "enzyme-to-json": "3.6.1",
-    "eslint": "7.10.0",
-    "eslint-import-resolver-webpack": "0.13.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-react": "7.21.2",
-    "eslint-plugin-react-hooks": "4.1.2",
-    "file-loader": "6.1.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "enzyme-to-json": "3.6.2",
+    "eslint": "8.8.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-import-resolver-webpack": "0.13.2",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "26.5.3",
+    "eslint-plugin-mattermost": "github:mattermost/eslint-plugin-mattermost",
+    "eslint-plugin-no-only-tests": "2.6.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "file-loader": "6.2.0",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "3.0.0",
-    "jest": "26.4.2",
-    "jest-canvas-mock": "2.3.0",
-    "jest-junit": "11.1.0",
-    "mattermost-webapp": "github:mattermost/mattermost-webapp#6dcac2993000139f19c1b018f7fa6b9266973918",
+    "jest": "27.4.7",
+    "jest-canvas-mock": "2.3.1",
+    "jest-junit": "13.0.0",
     "redux-mock-store": "1.5.4",
     "redux-thunk": "2.4.1",
-    "sass-loader": "10.0.2",
-    "style-loader": "1.2.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12"
+    "sass-loader": "13.0.0",
+    "style-loader": "3.3.1",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1"
   },
   "dependencies": {
     "core-js": "3.22.8",
     "invert-color": "2.0.0",
     "marked": "github:mattermost/marked#2ef7f28cc7718e3f551c4ce9ea75fdd7580c2008",
+    "mattermost-webapp": "github:mattermost/mattermost-webapp#6dcac2993000139f19c1b018f7fa6b9266973918",
     "react": "^16.14.0",
-    "react-redux": "7.2.1",
-    "redux": "4.0.5",
+    "react-redux": "8.0.2",
+    "redux": "4.2.0",
     "superagent": "6.1.0",
     "typescript": "4.6.4",
     "xregexp": "4.3.0"
@@ -82,13 +90,14 @@
     "snapshotSerializers": [
       "<rootDir>/node_modules/enzyme-to-json/serializer"
     ],
+    "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/non_npm_dependencies/"
     ],
     "clearMocks": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/*.{js,jsx,ts,tsx}"
     ],
     "coverageReporters": [
       "lcov",
