Downstream mattermost-plugin-starter-template (#501)
* dev: update to node 16

* chore: remove unnecessary file

* build: add github actions

* chore: update typescript veersoin to 4.6.4

* fix test settings

* fix build error

* use @ as import path

* stop introducing gh-actions for now

* add .vscode setting file

* remove sync tool

* update webapp dependencies

* update eslint config and fix lint errors

* suppress exlint warning

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@mattermost/types/*": ["node_modules/@mattermost/types/lib/*"],
+      "mattermost-redux/*": ["node_modules/mattermost-webapp/packages/mattermost-redux/src/*"],
+      "reselect": ["node_modules/mattermost-webapp/packages/reselect/src"],
+    },
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,11 +27,11 @@
     "noEmit": true,
     "experimentalDecorators": true,
     "jsx": "react",
-    "baseUrl": "./src",
-    "typeRoots": [ "./src/types", "./node_modules/@types"],
+    "useUnknownInCatchVariables": false
   },
   "include": [
-    "src"
+    "src",
+    "tests"
   ],
   "exclude": [
     "dist",
