reverted js changes

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -5,6 +5,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@mattermost/types/*": ["node_modules/@mattermost/types/lib/*"],
+      "mattermost-redux/*": ["node_modules/mattermost-webapp/packages/mattermost-redux/src/*"],
+      "reselect": ["node_modules/mattermost-webapp/packages/reselect/src"],
     },
     "lib": [
       "dom",
