--- a/webapp/package.json
+++ b/webapp/package.json
@@ -81,13 +81,10 @@
     "core-js": "3.22.8",
     "invert-color": "2.0.0",
     "marked": "github:mattermost/marked#2ef7f28cc7718e3f551c4ce9ea75fdd7580c2008",
-    "mattermost-redux": "5.33.1",
+    "mattermost-webapp": "github:mattermost/mattermost-webapp#6dcac2993000139f19c1b018f7fa6b9266973918",
     "react": "^16.14.0",
-    "react-bootstrap": "2.9.2",
-    "react-dom": "^16.14.0",
     "react-redux": "8.0.2",
     "redux": "4.2.0",
-    "styled-components": "6.1.8",
     "superagent": "6.1.0",
     "typescript": "4.6.4",
     "xregexp": "4.3.0"
@@ -114,7 +111,9 @@
       "^.+\\.(css|less|scss)$": "identity-obj-proxy",
       "^.*i18n.*\\.(json)$": "<rootDir>/tests/i18n_mock.json",
       "^bundle-loader\\?lazy\\!(.*)$": "$1",
+      "^reselect": "<rootDir>/node_modules/mattermost-webapp/packages/reselect/src",
       "^@mattermost/types/(.*)$": "<rootDir>/node_modules/@mattermost/types/lib/$1",
+      "^mattermost-redux/(.*)$": "<rootDir>/node_modules/mattermost-webapp/packages/mattermost-redux/src/$1",
       "^@/(.*)$": "<rootDir>/src/$1"
     },
     "moduleDirectories": [
