--- a/.github/workflows/check-mocks.yml
+++ b/.github/workflows/check-mocks.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: "1.23"
 
       - name: Check if mocks are up to date
         run: |
           # Run make mocks
           make mocks
-          
+
           # Check if any files were changed
           git diff --exit-code
-          
+
           # If git diff returns a non-zero exit code, it means files were changed
           if [ $? -ne 0 ]; then
             echo "::error::Running 'make mocks' changed files. Please run 'make mocks' locally and commit the changes."
