Specify golang-version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,5 @@ jobs:
   plugin-ci:
     uses: mattermost/actions-workflows/.github/workflows/community-plugin-ci.yml@ce05ecbb0c51643e1cffb7834469df74ab68dae5
     secrets: inherit
+    with:
+      golang-version: 1.24
